# saftig

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  example.py  meson.build  pylint.rc  pyproject.toml  requirements.txt  setup.py  testing.py
.github/workflows/: black.yml  mypy.yml  pylint.yml  python-publish.yml  testing.yml
doc/source/: conf.py  index.rst  saftig.common.rst  saftig.evaluation.rst  saftig.lms.rst  saftig.polylms.rst  saftig.uwf.rst  saftig.wf.rst
examples/: lms_c.py
saftig/: __init__.py  _lms_c.c  _lms_c.cpp  common.py  evaluation.py  example.py  lms.py  lms_c.py  polylms.py  uwf.py  wf.py
src/: meson.build
src/saftig/: __init__.py  common.py  evaluation.py  lms.py  lms_c.py  polylms.py  uwf.py  wf.py
src/saftig/_lms_c/: _lms_c.cpp
testing/: __init__.py  test_doctest.py  test_evaluation.py  test_external_spicypy_wf.py  test_filters.py  test_lms.py  test_lms_c.py  test_polylms.py  test_uwf.py  test_wf.py  testing.py  toolbox.py
tooling/: lessons_learned.txt  pylint_testing.rc  run_linter.sh  run_linter_tests.sh
tooling/profiling/: plot.py  profile.py  profile_singlethread.py  profiling_results.npz  run_profiling.sh
