[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python",
    "ninja",
    "numpy >= 2.0.0",
]

[project]
name = "saftig"
version = "0.1.0"
description = "Implementations of different static and adaptive filtering techniques for the prediction of a correlated signal component from witness signals."
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["prediction", "filtering", "Wiener filter", "LeastMeanSquares", "noise cancellation"]
authors = [{name="Tim Kuhlbusch", email="kuhlbusch@physik.rwth-aachen.de"}]
dependencies = [
    "numpy >= 2.0.0",
    "scipy",
    "matplotlib",
    "icecream",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pylint",
]

[project.urls]
Repository = "https://github.com/timbk/saftig"
